--- a/publications/index.html
+++ b/publications/index.html
@@ -228,7 +228,7 @@
 
 
 </header>
-<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FNPavpKZwqQbitC2a3&noBootstrap=1&jsonp=1&group0=custom_type&sort=-year&fullnames=1"></script>
+<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2F5EpjPs5YRK4uThzhp&noBootstrap=1&jsonp=1&group0=custom_type&sort=-year&fullnames=1"></script>
 
       
       
