--- a/publications/index.html
+++ b/publications/index.html
@@ -228,6 +228,9 @@
 
 
 </header>
+
+<iframe width="560" height="315" src="https://www.youtube.com/embed/WKv0s2mMkHQ?si=v8e1PgHyxFrKTF69" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+
 <script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2F5EpjPs5YRK4uThzhp&noBootstrap=1&jsonp=1&group0=custom_type&sort=-year&fullnames=1"></script>
 
       
