--- a/publications/index.html
+++ b/publications/index.html
@@ -256,7 +256,7 @@
     text-decoration-thickness: 0.8px; /* Thickness of the underline */
 }
 </style>
-<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FcwXij7SZv4rN4ZLfg&noBootstrap=1&jsonp=1&group0=custom_type&sort=-year&fullnames=1"></script>
+<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2F2LyA7aRcJYXauyB9H&noBootstrap=1&jsonp=1&group0=custom_type&sort=-year&fullnames=1"></script>
 <script>
   window.onload = function() {
     // Ensure 'David Zhu' appears bold everywhere on the page
