add links to paper

--- a/index.html
+++ b/index.html
@@ -266,28 +266,39 @@
   <li><a href="/publications/index.html">Shared Autonomy and Teleoperation</a>
     <p>This research focuses on developing shared autonomies that enable intuitive and efficient teleoperation 
       of robots by combining AI-driven methodologies with human input,
-      and is conducted by an international team from Japan, Germany, and France.</p>
+      and is conducted by an international team from Japan, Germany, and France.
+      <a href="https://ieeexplore.ieee.org/document/10173494">[Link1]</a>,
+      <a href="https://ieeexplore.ieee.org/document/8990033">[Link2]</a>
+    </p>
       <img src="/images/sharedcontrol.png" alt="Awards" width="80%" height="auto" controls>
       <!-- <video class="centered-video" width="80%" height="auto" controls>
         <source src="images/shared_control_video.mp4" type="video/mp4">
       </video> -->
   
   <li><a href="/publications/index.html">Foundation Models Enabled Robotics</a>
-    <p>This research aims to enhance autonomous robotic manipulation 
-      through Human-Robot Collaboration (HRC) by leveraging foundation models 
+    <p>This research aims to enhance autonomous robotic manipulation
+      through Human-Robot Collaboration (HRC) by leveraging foundation models
       to translate high-level language commands into actionable motion sequences, 
-      integrating teleoperation with Dynamic Movement Primitives (DMP) for skill learning and adaptation.</p>
+      integrating teleoperation with Dynamic Movement Primitives (DMP) for skill
+      learning and adaptation.
+      <a href="https://arxiv.org/pdf/2406.14097">[Link]
+    </p>
       <img src="/images/llm.png" alt="Awards" width="90%" height="auto" controls>
       <!-- <video class="centered-video" width="80%" height="auto" controls>
         <source src="images/videoplayback (10).mp4" type="video/mp4">
       </video> -->
   </li>
   <li><a href="/publications/index.html">Haptic Interfaces</a>
-    <p>This research develops a multi-point tactile interface capable 
-      of presenting shear forces alongside normal forces, 
-      allowing for real-time perception of object slippage and posture changes during dexterous 
-      in-hand manipulation, 
-      which was featured in the <a href="https://www.nikkan.co.jp/articles/view/00654651">News Media</a>.</p>
+    <p>This research develops a multi-point tactile interface capable
+      of presenting shear forces alongside normal forces,
+      allowing for real-time perception of object slippage and posture changes during dexterous
+      in-hand manipulation,
+      which was featured in the
+      <a href="https://www.nikkan.co.jp/articles/view/00654651">News Media</a>.
+      <a href="https://arxiv.org/pdf/2303.03250">[Link]</a>
+      
+    </p>
+      
       <img src="/images/tactile.gif" alt="Awards" width="80%" height="auto" controls>
   </li>
 
@@ -296,7 +307,9 @@
       to estimate contact force, enabling force feedback 
       through bilateral control. It aims to expand tactile feedback possibilities 
       by feeding back both normal and shear forces 
-      utilizing novel tactile interfaces.</p>
+      utilizing novel tactile interfaces.
+      <a href="https://arxiv.org/pdf/2212.13007">[Link]</a>
+    </p>
       <img src="/images/DIGIT.gif" alt="Awards" width="80%" height="auto" controls>
   </li>
 
@@ -304,7 +317,11 @@
     <p>This research focuses on the development of exoskeletons and robotic limbs, 
       exploring advanced control systems, biomechanics, and sensor technologies 
       to enhance human mobility and strength, while emphasizing embodiment 
-      to create more seamless integration between users and robotic artifacts. </p>
+      to create more seamless integration between users and robotic artifacts.
+      <a href="https://robomechjournal.springeropen.com/articles/10.1186/s40648-019-0135-0">[Link1]</a>,
+      <a href="https://ieeexplore.ieee.org/document/10632998">[Link2]</a>,
+      <a href="https://ieeexplore.ieee.org/document/10190109">[Link3]</a>
+    </p>
       <img src="/images/ert.gif" alt="Awards" width="80%" height="auto" controls>
   </li>
   
@@ -319,8 +336,7 @@
   
   <li>Embodied Interface for Enhanced Teleoperation of Intelligent Robots<br>
     (身体化インターフェイスを介したスマートロボットの遠隔操作に関する研究),<br> 
-    JSPS Grant-in-Aid for Early-Career Scientists, 2022
-    -2024, Principal Investigator
+    JSPS Grant-in-Aid for Early-Career Scientists, 2022-2024, Principal Investigator
   </li>
 
   <li>CHIRON 
