add links to paper

--- a/index.html
+++ b/index.html
@@ -308,7 +308,8 @@
       through bilateral control. It aims to expand tactile feedback possibilities 
       by feeding back both normal and shear forces 
       utilizing novel tactile interfaces.
-      <a href="https://arxiv.org/pdf/2212.13007">[Link]</a>
+      <a href="https://arxiv.org/pdf/2212.13007">[Link1]</a>
+      <a href="https://arxiv.org/pdf/2404.19585">[Link2]</a>
     </p>
       <img src="/images/DIGIT.gif" alt="Awards" width="80%" height="auto" controls>
   </li>
