--- a/publications/index.html
+++ b/publications/index.html
@@ -257,7 +257,7 @@
     text-decoration-thickness: 0.8px; /* Thickness of the underline */
 }
 </style>
-<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2FHAz7pnxjt45JroJhk&noBootstrap=1&jsonp=1&group0=custom_type&sort=-year&fullnames=1"></script>
+<script src="https://bibbase.org/show?bib=https%3A%2F%2Fbibbase.org%2Fnetwork%2Ffiles%2Fd6ZGKXRr8GT5N7jEY&noBootstrap=1&jsonp=1&group0=custom_type&sort=-year&fullnames=1"></script>
 </div>
 <script>
   window.onload = function() {
