--- a/index.html
+++ b/index.html
@@ -325,6 +325,15 @@
     </p>
       <img src="/images/ert.gif" alt="Awards" width="80%" height="auto" controls>
   </li>
+
+  <li><a href="/publications/index.html">Learning Locomanipulation Policies</a>
+    <p>This research investigates the development of locomanipulation policies for legged robots, 
+      emphasizing whole-body control and reinforcement learning to achieve seamless integration of locomotion and manipulation. 
+      By leveraging Isaac Sim for sim-to-real transfer, 
+      it addresses challenges in deploying adaptive and robust policies in real-world environments. [Coming Soon]
+    </p>
+      <img src="/images/locomanipulation.gif" alt="Awards" width="80%" height="auto" controls>
+  </li>
   
 </ul>
 
