franka humanoid paper update

--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
       <a href="https://ieeexplore.ieee.org/document/10173494">[Link1]</a>,
       <a href="https://ieeexplore.ieee.org/document/8990033">[Link2]</a>
     </p>
-      <img src="/images/sharedcontrol.png" alt="Awards" width="80%" height="auto" controls>
+      <img src="/images/teleoperation.png" alt="Awards" width="80%" height="auto" controls>
       <!-- <video class="centered-video" width="80%" height="auto" controls>
         <source src="images/shared_control_video.mp4" type="video/mp4">
       </video> -->
@@ -332,7 +332,17 @@
       By leveraging Isaac Sim for sim-to-real transfer, 
       it addresses challenges in deploying adaptive and robust policies in real-world environments. [Coming Soon]
     </p>
-      <img src="/images/locomanipulation.gif" alt="Awards" width="80%" height="auto" controls>
+      <img src="/images/humanoid.gif" alt="Awards" width="80%" height="auto" controls>
+  </li>
+
+  <li><a href="/publications/index.html">Learning Enhanced Robot Manipulations</a>
+    <p>This research investigates learning-enhanced robot manipulation, 
+      addressing challenges such as dexterous force-sensitive manipulation, 
+      teleoperation-based skill acquisition, and foundation model-enhanced perception and planning. 
+      By integrating classical control with data-driven methods, including reinforcement learning, 
+      it aims to develop generalizable and robust manipulation capabilities across diverse tasks and environments. [Coming Soon]
+    </p>
+      <img src="/images/franka.png" alt="Awards" width="80%" height="auto" controls>
   </li>
   
 </ul>
@@ -349,6 +359,11 @@
   <li>Human-Robot Collaboration Framework through Teleoperation and Large Language Models <br>
     (大規模言語モデルを活用した遠隔操作による人・ロボット協働基盤の創成)<br>
     JSPS Grant-in-Aid for Early-Career Scientists, 2024-2027, 
+    Principal Investigator</li>
+  
+  <li>A General Purpose Exoskeleton for Teloperation based Robot Learning<br>
+    (遠隔操作によるロボット学習のための汎用外骨格ロボットに関する研究)<br>
+    Nagamori Foundation, 2025-2026, 
     Principal Investigator</li>
   
   <li>Embodied Interface for Enhanced Teleoperation of Intelligent Robots<br>
