--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
   <li><a href="https://www.jst.go.jp/kisoken/index.html">遠隔操作および基盤モデルによる人型研究支援ロボットシステムの創成<strong>（JSTさきがけ）</strong></a>
     <br>
     (Development of a Humanoid Research Support System through Teleoperation and Foundation Models)<br>
-    JST Strategic Basic Research Programs PRESTO Sakigake, 2025-2029, 
+    JST Strategic Basic Research Programs <strong>PRESTO Sakigake</strong>, 2025-2029, 
     Principal Investigator</li>
   
   <li><a href="https://weblab.t.u-tokyo.ac.jp/news/20250204/">DEMETER: Development of adaptive pruning robots for sustainable viticulture through simulation 
